<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rtc_entrance_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="15dp"
            android:gravity="center_horizontal"
            android:text="@string/screenshare_title"
            android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_room_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="100dp"
        android:layout_marginRight="60dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/screenshare_please_input_roomid" />

        <EditText
            android:id="@+id/et_input_room_id"
            android:layout_width="match_parent"
            android:layout_height="34dp"
            android:layout_marginTop="5dp"
            android:inputType="number" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/ll_user_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ll_room_info"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="60dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/screenshare_please_input_userid" />

        <EditText
            android:id="@+id/et_input_username"
            android:layout_width="match_parent"
            android:layout_height="34dp"
            android:layout_marginTop="5dp" />

    </LinearLayout>


    <TextView
        android:id="@+id/tv_role"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/ll_user_id"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="30dp"
        android:text="@string/screenshare_please_select_role" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_role"
        android:layout_marginLeft="60dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_anchor"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:background="@color/screenshare_single_select_button_bg"
            android:text="@string/screenshare_anchor" />

        <Button
            android:id="@+id/btn_audience"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:background="@color/screenshare_single_select_button_bg_off"
            android:text="@string/screenshare_audience" />

    </LinearLayout>


    <Button
        android:id="@+id/bt_enter_room"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_margin="60dp"
        android:text="@string/screenshare_enter_room" />

</RelativeLayout>